syntax= "proto2";

message Property {
    required string key     = 1;
    required string value   = 2;
}

message ErrorMessage {
    required uint32 error_code          = 1;
    required string error_description   = 2;
}

message ValueResp {
    required bool success  = 1;
    required Property keyValue = 2;
    optional ErrorMessage error = 3;
}

message MessageHeader {
    required string msg_name        = 1;
    optional string source          = 2;
    optional string destination     = 3;
    optional uint64 sequence_nbr    = 4;
    optional bool retransmission    = 5;
    repeated Property add_data      = 6;
}
